--- a/package.json
+++ b/package.json
@@ -17,11 +17,15 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "engines":{
-   "node": "16.x"
+  "engines": {
+    "node": "16.x"
   },
   "bugs": {
     "url": "https://github.com/dmgudeman/zelp/issues"
   },
-  "homepage": "https://github.com/dmgudeman/zelp#readme"
+  "homepage": "https://github.com/dmgudeman/zelp#readme",
+  "dependencies": {
+    "axios": "^1.3.6",
+    "react-dropzone": "^14.2.3"
+  }
 }
