--- a/render.yaml
+++ b/render.yaml
@@ -20,3 +20,5 @@ services:
           property: connectionString
       - key: RAILS_MASTER_KEY
         sync: false
+      - key: REACT_APP_MAPS_API_KEY
+        sync: false
