--- a/.gitignore
+++ b/.gitignore
@@ -27,13 +27,10 @@ yarn-error.log*
 hosting/*
 
 /public
-<<<<<<< HEAD
 public
 
 /log
 log
 log/development.log
-=======
-/development.log
 
->>>>>>> main
+/hosting
