--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
   "homepage": "https://github.com/dmgudeman/zelp#readme",
   "dependencies": {
     "axios": "^1.3.6",
+    "jquery": "^3.6.4",
+    "lodash": "^4.17.21",
     "react-dropzone": "^14.2.3"
   }
 }
