--- a/package.json
+++ b/package.json
@@ -25,9 +25,13 @@
   },
   "homepage": "https://github.com/dmgudeman/zelp#readme",
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^6.4.0",
+    "@fortawesome/free-brands-svg-icons": "^6.4.0",
+    "@fortawesome/react-fontawesome": "^0.2.0",
     "axios": "^1.3.6",
     "jquery": "^3.6.4",
     "lodash": "^4.17.21",
-    "react-dropzone": "^14.2.3"
+    "react-dropzone": "^14.2.3",
+    "react-icons": "^4.8.0"
   }
 }
