--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "npm install --prefix ./frontend/src && npm run build --prefix ./frontend/src"
+    "build": "npm install --prefix ./frontend && npm run build --prefix ./frontend"
   },
   "repository": {
     "type": "git",
