--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@fortawesome/fontawesome-svg-core": "^6.4.0",
     "@fortawesome/free-brands-svg-icons": "^6.4.0",
     "@fortawesome/react-fontawesome": "^0.2.0",
+    "@reduxjs/toolkit": "^1.9.5",
     "axios": "^1.3.6",
     "jquery": "^3.6.4",
     "lodash": "^4.17.21",
