--- a/package.json
+++ b/package.json
@@ -33,5 +33,8 @@
     "lodash": "^4.17.21",
     "react-dropzone": "^14.2.3",
     "react-icons": "^4.8.0"
+  },
+  "devDependencies": {
+    "@types/react-router-dom": "^5.3.3"
   }
 }
