--- a/frontend/package.json
+++ b/frontend/package.json
@@ -56,5 +56,8 @@
     "@types/redux-logger": "^3.0.9",
     "redux-logger": "^3.0.6"
   },
+  "engines" : {
+    "node": "16.x"
+  },
   "proxy": "http://localhost:5000"
 }
