--- a/package.json
+++ b/package.json
@@ -2,13 +2,13 @@
   "name": "zelp",
   "version": "1.0.0",
   "description": "This README would normally document whatever steps are necessary to get the application up and running.",
-  "main": "index.js",
   "directories": {
     "lib": "lib"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "npm install --prefix ./frontend && npm run build --prefix ./frontend"
+ 
+    "build": "npm install --prefix frontend && npm run build --prefix frontend"
+  
   },
   "repository": {
     "type": "git",
