--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   },
   "scripts": {
  
-    "build": "npm install --prefix frontend && npm run build --prefix frontend"
+    "build": "npm install --prefix ./frontend && npm run build --prefix ./frontend"
   
   },
   "repository": {
