--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "redux-logger": "^3.0.6"
   },
   "devDependencies": {
-    "@types/react-router-dom": "^5.3.3"
+    "@types/react-router-dom": "^5.3.3",
+    "@types/redux-logger": "^3.0.9"
   }
 }
