--- a/frontend/package.json
+++ b/frontend/package.json
@@ -22,6 +22,7 @@
     "fortawesome": "^0.0.1-security",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-ga": "^3.3.1",
     "react-icons": "^4.8.0",
     "react-redux": "^8.0.5",
     "react-router-dom": "^5.3.4",
@@ -56,7 +57,7 @@
     "@types/redux-logger": "^3.0.9",
     "redux-logger": "^3.0.6"
   },
-  "engines" : {
+  "engines": {
     "node": "16.x"
   },
   "proxy": "http://localhost:5000"
